<resources>
    <string name="app_name">gobblet5</string>
    <string name="temochiRedBig">temochiRedBig</string>
    <string name="title_activity_select_tutorial">SelectTutorialActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!--    -->
    <string name="PlayWithComText">Play With Computer</string>
    <string name="PlayWithManText">Play With Friend</string>
    <string name="TutorialText">Tutorial</string>
    <string name="configText">Setting</string>
    <string name="ResultText">Result</string>
    <string name="FirstPlayer">PlayFirst</string>
    <string name="player1">1P</string>
    <string name="player2">2P</string>
    <string name="RandomText">Random</string>
    <string name="YouText">You</string>
    <string name="EnemyText">Opponent</string>
    <string name="comText">Computer</string>
    <string name="GameStartText">GameStart</string>
    <string name="BackToGame">Back To Game</string>
    <string name="BackToTitle">Back To Title</string>
    <string name="BackToGameSetting">Back To GameSetting</string>
    <string name="playAgain">PlayAgain</string>
    <string name="HowToOperateText">How To Operate</string>
    <string name="HowToPlayText">How To Play</string>
    <!--設定    -->
    <string name="SEText">Sound Effect</string>
    <string name="BGMText">Music</string>
    <string name="OnText">ON</string>
    <string name="OffText">OFF</string>
    <!--アクティビティ名-->
    <string name="SettingActivity">Setting</string>
    <string name="preGameActivity">GameSetting</string>
    <string name="selectTutorialActivity">Tutorial menu</string>
    <string name="HowToOperateMenuActivity">How To OperateMenu</string>
    <string name="HowToPlayActivity">How To Play</string>
    <string name="BackToTutorialMenu">Back To TutorialMenu</string>
    <string name="HowToSeeActivity">How To See</string>
    <!--操作説明    -->

    <!--ルール説明    -->
    <string name="Small">Small</string>
    <string name="Middle">Midium</string>
    <string name="Big">Large</string>
    <string name="NextText">Next</string>
    <string name="PreText">Previous</string>
    <string name="EnemyTurn">Opponent\'s Turn </string>
    <string name="YourTurn">Your Turn</string>
    <string name="VerticalText">Vertical</string>
    <string name="HorizontallyText">Horizontally</string>
    <string name="DiagonallyText">Diagonally</string>
    <string name="HowToOperateTutorialText1_1">Tap the piece you want to move \nfrom the three types of pieces you have.\nMove large piece as an example.</string>
    <string name="HowToOperateTutorialText1_2">Next, tap the square where you want put the pieces.</string>
    <string name="HowToOperateTutorialText1_3">Now you can place the pieces you have to the square.</string>
    <string name="HowToOperateTutorialText2_1">Tap the square where your piece is displayed.</string>
    <string name="HowToOperateTutorialText2_2">Next, tap destination square.</string>
    <string name="HowToOperateTutorialText2_3">Now you can move the pieces .</string>
    <string name="HowToPlayTutorialText1">This game is played by two people.</string>
    <string name="HowToPlayTutorialText2">Use 3 types of pieces, large, medium and small</string>
    <string name="HowToPlayTutorialText3">Both players place pieces on the square with each other.</string>
    <string name="HowToPlayTutorialText4">You win if you arrange four of your pieces in a vertical,</string>
    <string name="HowToPlayTutorialText5">horizontal, </string>
    <string name="HowToPlayTutorialText6">and diagonal row.</string>
    <string name="HowToPlayTutorialText7">You can move the piece once placed.</string>
    <string name="HowToPlayTutorialText8">If your piece in your hand is bigger \nthan the piece placed on the square.</string>
    <string name="HowToPlayTutorialText9">You can cover the piece placed on the bord with it.</string>
    <string name="HowToPlayTutorialText10">You can it on your own piece or on the opponent\'s piece.</string>
    <string name="HowToPlayTutorialText11">You can\'t move piece covered with other piece without .</string>
    <string name="BackToHowToOperateMenu">Back To \nHow To OperateMenu</string>
    <string name="MovePieceFromHandToSquare">Move Piece From Hand \nTo Square</string>
    <string name="MovePieceFromSquareToSquare">Move Piece From Square \nTo Square</string>
    <string name="Back">Back</string>
    <string name="Oops">Oops</string>
    <string name="cannotInsertDialogText">You can\'t put there</string>
    <string name="QuitGame">Quit Game</string>
    <string name="cannotPickupDialogText">You can\'t pick up of there</string>
    <string name="notYourTurnDialogText">Not your turn now</string>
    <string name="OkText">OK</string>
    <string name="startOver">Start Over</string>
    <string name="CheckTheBoard">Check The Board</string>
    <string name="pieceInHand">Piece In Hand</string>
    <string name="sorryText">sorry,any sound can\'t be make on this device version</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="HowToPlayTutorialText13">The rule explanation is over.</string>
    <string name="HowToPlayTutorialText12">If opponent lifts a piece and your piece comes out, and there are four piece in a row, you win.</string>
    <string name="P1">P1</string>
    <string name="P2">P2</string>
</resources>