<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/table"
    tools:context=".preGameWithComActivity">



    <LinearLayout
        android:id="@+id/etcBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/backButtonGuidelineHB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backButtonGuidelineHS">

        <LinearLayout
            android:id="@+id/backButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@drawable/back_btn_style"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:scaleX="@dimen/iconScale"
                android:scaleY="@dimen/iconScale"
                app:srcCompat="@drawable/ic_uturn" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="9"
                android:autoSizeTextType="uniform"
                android:gravity="center"
                android:text="@string/BackToTitle"
                android:textColor="@color/black" />
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />
        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textWhereIsHere"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:autoSizeTextType="uniform"
            android:background="@color/textBackground"
            android:gravity="center"
            android:text="@string/preGameActivity"
            android:textColor="@color/black" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/popup_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/SelectorGuidelineHB"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVE"
        app:layout_constraintStart_toStartOf="@+id/guidelineVS"
        app:layout_constraintTop_toTopOf="@+id/SelectorGuidelineHT">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" />

            <TextView
                android:id="@+id/setFirstGroup"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:autoSizeTextType="uniform"
                android:text="@string/FirstPlayer"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/RadioGroup"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/Button1p"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20"
                android:autoSizeTextType="uniform"
                android:foregroundGravity="center"
                android:text="@string/YouText" />

            <RadioButton
                android:id="@+id/Button2p"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="35"
                android:autoSizeTextType="uniform"
                android:foregroundGravity="center"
                android:text="@string/comText" />

            <RadioButton
                android:id="@+id/ButtonRandom"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:autoSizeTextType="uniform"
                android:foregroundGravity="center"
                android:text="@string/RandomText" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/gameStartBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="uniform"
        android:background="@drawable/btn_style"
        android:text="@string/GameStartText"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/StartButtonGuidelineHE"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVE"
        app:layout_constraintStart_toStartOf="@+id/guidelineVS"
        app:layout_constraintTop_toTopOf="@+id/StartButtonGuidelineHS" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backButtonGuidelineVS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backButtonGuidelineHS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/backButtonGuidelineHB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/StartButtonGuidelineHS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/StartButtonGuidelineHE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/SelectorGuidelineHB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/SelectorGuidelineHT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

</androidx.constraintlayout.widget.ConstraintLayout>