<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dining"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineH2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9"
        />


    <LinearLayout
        android:id="@+id/l"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#5BFFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="15"
        app:layout_constraintBottom_toTopOf="@+id/guidelineH2"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1"
        app:layout_constraintTop_toTopOf="@+id/guidelineH1">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            app:srcCompat="@drawable/logo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/goPreGameWithComBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:autoSizeTextType="uniform"
            android:background="@drawable/btn_style"
            android:text="@string/PlayWithComText"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/goPreGameWithManBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:autoSizeTextType="uniform"
            android:background="@drawable/btn_style"
            android:text="@string/PlayWithManText"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/goTutorialBtn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:autoSizeTextType="uniform"
            android:background="@drawable/btn_style"
            android:text="@string/TutorialText"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:weightSum="10">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />

            <Button
                android:id="@+id/goConfigBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:autoSizeTextType="uniform"
                android:background="@drawable/btn_style"
                android:text="@string/configText"
                android:textAllCaps="false" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/debButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineV2"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/guidelineV1" />

</androidx.constraintlayout.widget.ConstraintLayout>